# stagecraft

./: .addlicense  .cursorignore  .editorconfig  .gitignore  .golangci.yml  AGENT_BRIEF_COVERAGE_PHASE1.md  AGENT_BRIEF_COVERAGE_PHASE2.md  AGENT_BRIEF_GOV_V1_CORE_PHASE3.md  ASSESSMENT.md  Agent.md  CONTRIBUTING.md  COVERAGE_COMPLIANCE_PLAN.md  COVERAGE_COMPLIANCE_PLAN_PHASE2.md  GOV_V1_CORE_PHASE3_PLAN.md  IMPROVEMENTS.md  NOTICE  PR_SUMMARY.md  README.md  TEST_COVERAGE_ANALYSIS.md  VALIDATION_REPORT.md  failure_lens  feature-map-check  features-tool  gen-features-overview  git_commit_guard  git_history_lens  go.mod  go.sum  indexers  main.go  spec-validate
.github/: pull_request_template.md  pull_request_template_commit_message_phase1.md  pull_request_template_commit_message_phase2.md
.hooks/: README.md  commit-msg  pre-commit  pre-commit-gov-snippet.sh
ai.agent/: README.md
ai.agent/rust/xray/: Cargo.toml
ai.agent/rust/xray/src/: canonical.rs  digest.rs  hash.rs  language.rs  loc.rs  main.rs  schema.rs  traversal.rs  write.rs
ai.agent/rust/xray/tests/: golden_scan.rs
ai.agent/rust/xray/tests/outputs/run1/: index.json
blog/: 01-why-not-kamal.md  02-project-scaffold.md  03-migration-strategies.md  04-features-now-and-future.md  05-development-strategy.md  06-levraging-skills.md
cmd/: root.go
discussions/: 04-new-feature-ideas.md
docs/: CLI_PLAN_ANALYSIS.md  CLI_PLAN_IMPLEMENTATION_OUTLINE.md  COMMIT_MESSAGE_ANALYSIS.md  CONTRIBUTING_CURSOR.md  COREPLAN_IMPLEMENTATION_START.md  FUTURE_ENHANCEMENTS.md  README.md  STRATEGIC_DOC_MIGRATION.md  V2_FEATURES.md  (+6 more)
(+647 files in other folders)
